--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Rabica Tahir" />
+    <meta
+      name="description"
+      content=" E-commerce Product Page main Solution for FrontendMentor.io"
+    />
+    <meta
+      name="keywords"
+      content="Frontend Mentor, E-commerce Product Page main, Rabica Tahir"
+    />
+    <meta
+      property="og:title"
+      content="E-commerce Product Page main - Frontend Mentor"
+    />
+    <meta
+      property="og:description"
+      content="E-commerce Product Page main for FrontendMentor.io"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>add-to-cart-using-html-css-javascript</title>
+    <title>E-commerce Product Page main</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"  />
     <link rel="stylesheet" href="responsive.css">
