👨‍💻 code by rabica

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="single-img-details product" id="product1" data-name="Fall Limited Edition Sneakers" data-price="125" data-id="1">
             <p class="color">SNEAKERS COMPANY</p>
             <h1 class="title">Fall Limited Edition Sneakers</h1>
-            <h6>These low-profile sneakers are your perfect casual wear companion.Featuring a deaurable rubber outer sole,they'll withstand everything the weather can offer. </h6>
+            <h2 class="color-2">These low-profile sneakers are your perfect casual wear companion.Featuring a deaurable rubber outer sole,they'll withstand everything the weather can offer. </h2>
             <div class="price">
                 <h2 class="now-Price">$125.00</h2>
                 <h3>50%</h3> </div>
@@ -170,7 +170,7 @@
                 <div class="both-buttons">
                 <div class="count">
                     <span class="down" onclick="decreaseCount(event, this)">-</span>
-                    <input type="text" value="1"  class="counting" aria-labelledby="just-counting">
+                   <label>Number</label> <input type="text" value="1"  class="counting" aria-labelledby="just-counting">
                     <span class="up" onclick="increaseCount(event, this)">+</span>
                 </div>
                 
