--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
    <div class="container">
       <div class="content">   
       <div class="display-container ourSlides">
-        <img src="images/image-product-1.jpg" style="width:100%">
+        <img src="images/image-product-1.jpg" style="width:100%" alt="loading">
       </div>
       <div class="display-container ourSlides">
-        <img src="images/image-product-2.jpg" style="width:100%"> 
+        <img src="images/image-product-2.jpg" style="width:100%" alt="loading"> 
       </div>
       <div class="display-container ourSlides">
-        <img src="images/image-product-3.jpg" style="width:100%">
+        <img src="images/image-product-3.jpg" style="width:100%" alt="loading">
       </div>
       <div class="display-container ourSlides">
-        <img src="images/image-product-4.jpg" style="width:100%">
+        <img src="images/image-product-4.jpg" style="width:100%" alt="loading">
        
       </div>
       <button class="btn-2 slider__btn--left" onclick="plusDivs(-1)">&#10094;</button>
@@ -100,19 +100,19 @@
     <main id="details">
         <div class="single-img">
           
-            <img src="images/image-product-1.jpg" alt="loading" width="100%" id="mainimg" class="hover-shadow cursor" onclick="openModal();currentSlide(1)">
+            <img src="images/image-product-1.jpg" alt="loading" width="100px" id="mainimg" class="hover-shadow cursor" onclick="openModal();currentSlide(1)">
             <div class="small-img-group row">
              <div class="small-img column">
-                <img src="images/image-product-1-thumbnail.jpg" alt="loading"  width="100%"  class="hover-shadow cursor"  onclick="openModal();currentSlide(1)">
+                <img src="images/image-product-1-thumbnail.jpg" alt="loading"  width="100px"  class="hover-shadow cursor"  onclick="openModal();currentSlide(1)">
              </div>
              <div class="small-img column">
-                <img src="images/image-product-2-thumbnail.jpg" alt="loading" width="100%"  class="hover-shadow cursor"  onclick="openModal();currentSlide(2)">
+                <img src="images/image-product-2-thumbnail.jpg" alt="loading" width="100px"  class="hover-shadow cursor"  onclick="openModal();currentSlide(2)">
              </div>
              <div class="small-img column">
-                <img src="images/image-product-3-thumbnail.jpg" alt="loading" width="100%"  class="hover-shadow cursor"  onclick="openModal();currentSlide(3)">
+                <img src="images/image-product-3-thumbnail.jpg" alt="loading" width="100px"  class="hover-shadow cursor"  onclick="openModal();currentSlide(3)">
              </div>
              <div class="small-img column">
-                <img src="images/image-product-4-thumbnail.jpg" alt="loading" width="100%"  class="hover-shadow cursor"  onclick="openModal();currentSlide(4)">
+                <img src="images/image-product-4-thumbnail.jpg" alt="loading" width="100px"  class="hover-shadow cursor"  onclick="openModal();currentSlide(4)">
             </div>
          </div>
         </div>
