--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="both-buttons">
                 <div class="count">
                     <span class="down" onclick="decreaseCount(event, this)">-</span>
-                   <label>Number</label> <input type="text" value="1"  class="counting">
+                   <label>Number</label> <input type="text" value="1"  class="counting" aria-labelledby="counting">
                     <span class="up" onclick="increaseCount(event, this)">+</span>
                 </div>
                 
