--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
     <main id="details">
         <div class="single-img">
           
-            <img src="images/image-product-1.jpg" alt="loading" width="100px" id="mainimg" class="hover-shadow cursor" onclick="openModal();currentSlide(1)">
+            <img src="images/image-product-1.jpg" alt="loading" style="width:100%;" id="mainimg" class="hover-shadow cursor" onclick="openModal();currentSlide(1)">
             <div class="small-img-group row">
              <div class="small-img column">
-                <img src="images/image-product-1-thumbnail.jpg" alt="loading"  width="100px"  class="hover-shadow cursor"  onclick="openModal();currentSlide(1)">
+                <img src="images/image-product-1-thumbnail.jpg" alt="loading"  style="width:100%;"  class="hover-shadow cursor"  onclick="openModal();currentSlide(1)">
              </div>
              <div class="small-img column">
-                <img src="images/image-product-2-thumbnail.jpg" alt="loading" width="100px"  class="hover-shadow cursor"  onclick="openModal();currentSlide(2)">
+                <img src="images/image-product-2-thumbnail.jpg" alt="loading" style="width:100%;"  class="hover-shadow cursor"  onclick="openModal();currentSlide(2)">
              </div>
              <div class="small-img column">
-                <img src="images/image-product-3-thumbnail.jpg" alt="loading" width="100px"  class="hover-shadow cursor"  onclick="openModal();currentSlide(3)">
+                <img src="images/image-product-3-thumbnail.jpg" alt="loading" style="width:100%;"  class="hover-shadow cursor"  onclick="openModal();currentSlide(3)">
              </div>
              <div class="small-img column">
-                <img src="images/image-product-4-thumbnail.jpg" alt="loading" width="100px"  class="hover-shadow cursor"  onclick="openModal();currentSlide(4)">
+                <img src="images/image-product-4-thumbnail.jpg" alt="loading" style="width:100%;"  class="hover-shadow cursor"  onclick="openModal();currentSlide(4)">
             </div>
          </div>
         </div>
