--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@
   <div class="modal-content">
    <div class="mySlides">
       <div class="numbertext">1 / 4</div>
-      <img src="images/image-product-1.jpg" style="width:100px" alt="loading">
+      <img src="images/image-product-1.jpg"  alt="loading">
     </div>
     <div class="mySlides">
       <div class="numbertext">2 / 4</div>
-      <img src="images/image-product-2.jpg" style="width:100px" alt="loading">
+      <img src="images/image-product-2.jpg"  alt="loading">
     </div>
     <div class="mySlides">
       <div class="numbertext">3 / 4</div>
-      <img src="images/image-product-3.jpg" style="width:100px" alt="loading">
+      <img src="images/image-product-3.jpg"  alt="loading">
     </div>
     <div class="mySlides">
       <div class="numbertext">4 / 4</div>
-      <img src="images/image-product-4.jpg" style="width:100px" alt="loading">
+      <img src="images/image-product-4.jpg"  alt="loading">
     </div>
     
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
